# ai-bom-scan

./: .gitignore  LICENSE  README.md  main.py  policy-example.yaml  pyproject.toml
src/ai_bom_scan/: __init__.py  api.py  cli.py  config.py  scan.py  search.py
src/ai_bom_scan/utils/: html.py  output.py
