[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-bom-scan"
version = "0.1.0"
description = "A tool to scan Snyk AI-BOMs for specific components in Snyk organizations"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Marcelo Sousa", email = "marcelo.sousa@snyk.io"}
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "click>=8.0.0",
    "rich>=10.0.0",
    "pyyaml>=5.0.0",
    "python-dotenv>=0.19.0",
]

[project.scripts]
ai-bom-scan = "main:main"
aibom = "ai_bom_scan.cli:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["src", "."]
